# astroclassify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  detect_auto  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements-server.in  requirements-server.txt  requirements.in  requirements.txt  tiny.fits
api/: main.py
astroclassify/: cli.py  data_sources.py  observability.py  psf_photometry.py
astroclassify/api/: io_export.py  main.py  photometry.py
astroclassify/core/: device.py
ops/: gunicorn.conf.py
ops/docker/: Dockerfile.cpu  Dockerfile.gpu
ops/grafana/: astroclassify_dashboard.json
tests/: conftest.py  test_api_smoke.py  test_cli.py  test_cutout_endpoint.py  test_photometry_synthetic.py
tests/golden/: export_photometry_psf.csv
